# portfolio-poetryforge

./: .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_PLAN.md  README.md  SECURITY.md  pyproject.toml
poetryforge/: __init__.py  cli.py
poetryforge/phonetics/: g2p.py  meter.py  meter_utils.py  rhyme_scheme.py  stress.py  syllable.py
poetryforge/rhyme/: build_index.py  expand_words.py  phonetic_rhyme.py  rhyme_db.py
tests/: test_deep_rhyme.py  test_dolnik_taktovik.py  test_g2p.py  test_meter.py  test_meter_feedback.py  test_rhyme.py  test_rhyme_db.py  test_rhyme_scheme.py  test_stress.py  test_syllable.py
